# MaterialRecognition

./: CMakeLists.txt  README.md  main.cpp
MaterialClassifier/: material_classifier.cpp  material_classifier.h  multimaterial_classifier.cpp  multimaterial_classifier.h
Miscellaneous/: conversion.h  data_io.h  interpolation.h  miscellaneous.cpp  miscellaneous.h  visualization.h
Preprocessing/: SLICSuperpixel.cpp
